--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   border-bottom: 1px solid #ffc05f;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 4%;
+  padding-right: 4%;
 }
 
 .logo {
@@ -73,10 +73,15 @@
 .search-bar .sb-width-fixer input {
   width: 100%;
   height: 50%;
-  padding-left: 2em;
+  padding-left: 6%;
   border: 2px solid #444aff;
   border-radius: 5px;
   outline: none;
+  background-color: whitesmoke;
+}
+
+.search-bar .sb-width-fixer input:hover {
+  background-color: white;
 }
 
 .search-bar .sb-width-fixer a {
@@ -88,7 +93,8 @@
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  left: 7px;
+  left: 1.5%;
+  text-decoration: none;
 }
 
 .profile-icon {
@@ -112,5 +118,76 @@
 .profile-icon i {
   font-size: 2em;
   color: #444aff;
+}
+
+/*---------------------------BOTTOM SECTION -----------------------*/
+.bottom-container {
+  padding-left: 4%;
+  padding-right: 4%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 3%;
+}
+
+.toggle-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.toggle-container a {
+  text-decoration: none;
+  margin-top: 3rem;
+}
+
+.form-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+}
+
+.form-container .fc-width-fixer {
+  width: 80%;
+}
+
+.form-container .fc-width-fixer h2 {
+  text-align: center;
+}
+
+.form-container .fc-width-fixer form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
 }
 /*# sourceMappingURL=styles.css.map */
