--- a/styles.scss
+++ b/styles.scss
@@ -13,14 +13,18 @@ $bg-tone: #f8f0df;
   flex: 1;
 }
 
+@mixin default-padding {
+  padding-left: 4%;
+  padding-right: 4%;
+}
+
 /*---------------------------TOP SECTION----------------------*/
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid $yellow-tone;
-  padding-left: 1em;
-  padding-right: 1em;
+  @include default-padding;
 }
 
 .logo {
@@ -47,10 +51,14 @@ $bg-tone: #f8f0df;
     input {
       width: 100%;
       height: 50%;
-      padding-left: 2em;
+      padding-left: 6%;
       border: 2px solid $blue-tone;
       border-radius: 5px;
       outline: none;
+      background-color: whitesmoke;
+      &:hover {
+        background-color: rgb(255, 255, 255);
+      }
     }
 
     a {
@@ -58,7 +66,8 @@ $bg-tone: #f8f0df;
       display: flex;
       align-items: center;
       position: absolute;
-      left: 7px;
+      left: 1.5%;
+      text-decoration: none;
     }
   }
 }
@@ -71,3 +80,43 @@ $bg-tone: #f8f0df;
     color: $blue-tone;
   }
 }
+
+/*---------------------------BOTTOM SECTION -----------------------*/
+
+.bottom-container {
+  @include default-padding;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3%;
+}
+
+.toggle-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  a {
+    text-decoration: none;
+    margin-top: 3rem;
+  }
+}
+
+.form-container {
+  @include flex-center;
+  flex-flow: column wrap;
+  flex: 4;
+
+  .fc-width-fixer {
+    width: 80%;
+
+    h2 {
+        text-align: center;
+    }
+    form {
+      display: flex;
+      flex-flow: column wrap;
+    }
+  }
+}
+
+//grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
