--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,9 @@
 $blue-tone: #444aff;
 $yellow-tone: #ffc05f;
 $bg-tone: #f8f0df;
-
+$card-tone: #f0f0cb;
+$pink-tone: #f7dad9;
+$insideCard-tone: #e9e2d3;
 * {
   background-color: $bg-tone;
 }
@@ -59,8 +61,6 @@ $bg-tone: #f8f0df;
       &:hover {
         background-color: rgb(255, 255, 255);
       }
-
-
     }
 
     a {
@@ -92,6 +92,7 @@ $bg-tone: #f8f0df;
   margin-top: 3%;
 }
 
+/*-------TOGGLER------*/
 .toggle-container {
   display: flex;
   flex-direction: column;
@@ -103,6 +104,7 @@ $bg-tone: #f8f0df;
   }
 }
 
+/*--------FORM--------*/
 .form-container {
   @include flex-center;
   flex-flow: column wrap;
@@ -112,7 +114,7 @@ $bg-tone: #f8f0df;
     width: 80%;
 
     h2 {
-        text-align: center;
+      text-align: center;
     }
     form {
       display: flex;
@@ -121,4 +123,52 @@ $bg-tone: #f8f0df;
   }
 }
 
-//grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+/*--------CARDS--------*/
+.card-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  background-color: $yellow-tone;
+  padding: 2rem;
+  grid-gap: 1rem;
+  border-radius: 1rem;
+}
+
+.card {
+  background-color: $insideCard-tone;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 4px 7px 7px rgba(0, 0, 0, 0.5);
+
+  //TODO: why have to write bg color over and over
+
+  .image {
+    @include flex-center;
+    width: 100%;
+    background-color: $insideCard-tone;
+
+    img {
+      width: 100%;
+      border-radius: 1em;
+      background-color: $insideCard-tone;
+    }
+  }
+
+  .title-container {
+    background-color: $insideCard-tone;
+    text-align: center;
+    p {
+      margin-top: 0;
+      background-color: $insideCard-tone;
+      text-transform: capitalize;
+      font-size: 1.4rem;
+    }
+  }
+
+  .desc-container {
+    p {
+      text-align: justify;
+      background-color: $insideCard-tone;
+    }
+  }
+}
+
