--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@
 .search-bar .sb-width-fixer input {
   width: 100%;
   height: 50%;
-  padding-left: 6%;
+  padding-left: 3rem;
   border: 2px solid #444aff;
   border-radius: 5px;
   outline: none;
