--- a/styles.scss
+++ b/styles.scss
@@ -53,7 +53,7 @@ $insideCard-tone: #e9e2d3;
     input {
       width: 100%;
       height: 50%;
-      padding-left: 6%;
+      padding-left: 3rem;
       border: 2px solid $blue-tone;
       border-radius: 5px;
       outline: none;
