--- a/styles.scss
+++ b/styles.scss
@@ -58,7 +58,7 @@ $insideCard-tone: #e9e2d3;
       border-radius: 5px;
       outline: none;
       background-color: whitesmoke;
-      &:hover {
+      &:hover, &:focus {
         background-color: rgb(255, 255, 255);
       }
     }
@@ -109,6 +109,7 @@ $insideCard-tone: #e9e2d3;
   @include flex-center;
   flex-flow: column wrap;
   flex: 4;
+  
 
   .fc-width-fixer {
     width: 80%;
@@ -124,6 +125,9 @@ $insideCard-tone: #e9e2d3;
 }
 
 /*--------CARDS--------*/
+.card-container {
+  display: none;
+}
 .card-content {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
