--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   background-color: #f8f0df;
-  font-family: "Roboto", sans-serif;
 }
 
 /*---------------------------TOP SECTION----------------------*/
@@ -174,6 +177,7 @@ body {
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   -webkit-transform: translateY(-3px);
           transform: translateY(-3px);
+  cursor: pointer;
 }
 
 /*--------FORM--------*/
