--- a/styles.scss
+++ b/styles.scss
@@ -124,8 +124,8 @@ body {
     color: $blue-tone;
 
     &:hover {
-      box-shadow: 0 5px 10px rgba(0,0,0, 0.5);
-      transform:translateY(-3px);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+      transform: translateY(-3px);
       cursor: pointer;
     }
   }
@@ -138,16 +138,70 @@ body {
   flex: 4;
   display: none;
   background-color: $yellow-tone;
+  border-radius: 1rem;
+  box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.5);
+  padding: 2rem;
 
   .fc-width-fixer {
     width: 80%;
 
     h2 {
       text-align: center;
+      color: $blue-tone;
+      border-radius: 0.3rem;
+      border: 2px solid $blue-tone;
+      background-color: $bg-tone;
+      padding: 1rem;
     }
     form {
       display: flex;
       flex-flow: column wrap;
+
+      textarea {
+        width: 100%;
+        height: 15rem;
+        box-sizing: border-box;
+      }
+
+      label {
+        margin-top: 1rem;
+        color: $blue-tone;
+        font-weight: bold;
+        font-size: 1.2rem;
+        margin-bottom: 0.3rem;
+      }
+
+      input,
+      textarea,
+      button {
+        background-color: $bg-tone;
+        border: 2px solid $blue-tone;
+        border-radius: 0.3rem;
+        height: 2rem;
+
+        &:focus,
+        &:hover {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      button {
+        box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.5);
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        height: 3rem;
+        text-transform: uppercase;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: $blue-tone;
+        transition: 200ms all;
+
+        &:hover {
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+          transform: translateY(-3px);
+          cursor: pointer;
+        }
+      }
     }
   }
 }
@@ -177,8 +231,8 @@ body {
   transition: 200ms all;
 
   &:hover {
-    box-shadow: 0 5px 10px rgba(0,0,0, 0.5);
-    transform:translateY(-3px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    transform: translateY(-3px);
   }
 
   .image {
