--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,7 @@ body {
   border: 2px solid #444aff;
   border-radius: 0.3rem;
   height: 2rem;
+  outline: none;
 }
 
 .form-container .fc-width-fixer form input:focus, .form-container .fc-width-fixer form input:hover,
@@ -262,6 +263,10 @@ body {
 .form-container .fc-width-fixer form button:focus,
 .form-container .fc-width-fixer form button:hover {
   background-color: white;
+}
+
+.form-container .fc-width-fixer form textarea {
+  height: 10rem;
 }
 
 .form-container .fc-width-fixer form button {
@@ -363,5 +368,42 @@ body {
 .card .desc-container p {
   text-align: justify;
   background-color: #e9e2d3;
+}
+
+@media screen and (max-width: 1100px) {
+  .toggle-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 20px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .toggle-container button {
+    width: 47%;
+  }
+  .bottom-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form-container {
+    width: auto;
+    margin: 0;
+  }
+  .search-bar .sb-width-fixer {
+    width: 95%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
